@@ -3,21 +3,20 @@
  */
 package org.ligoj.bootstrap.core.dao;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Enumeration;
-import java.util.List;
-
 import org.hibernate.boot.archive.scan.spi.ScanEnvironment;
 import org.hibernate.boot.archive.scan.spi.ScanOptions;
 import org.hibernate.boot.archive.scan.spi.ScanParameters;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Enumeration;
+import java.util.List;
 
 /**
  * Test for {@link ResourceScanner}
@@ -64,15 +63,14 @@ class ResourceScannerTest {
 	}
 
 	/**
-	 * Simulate a non existing JAR entry inside a WAR entry.
+	 * Simulate a non-existing JAR entry inside a WAR entry.
 	 */
 	@Test
 	void testFilesInJarInWar() {
 		final ResourceScanner scanner = new ResourceScanner() {
 			@Override
 			protected Enumeration<URL> getOrmUrls() throws IOException {
-				return Collections.enumeration(Arrays.asList(new URL[] {
-						new URL("jar:file:/c://my.war!/WEB-INF/libs/my.jar!/com/mycompany/MyClass.class") }));
+				return Collections.enumeration(List.of(new URL("jar:file:/c://my.war!/WEB-INF/libs/my.jar!/com/mycompany/MyClass.class")));
 			}
 
 		};
@@ -82,7 +80,7 @@ class ResourceScannerTest {
 	}
 
 	/**
-	 * Simulate a non existing JAR entry.
+	 * Simulate a non-existing JAR entry.
 	 */
 	@Test
 	void testFilesInJar() {
@@ -90,7 +88,7 @@ class ResourceScannerTest {
 			@Override
 			protected Enumeration<URL> getOrmUrls() throws IOException {
 				return Collections.enumeration(
-						Arrays.asList(new URL[] { new URL("jar:file:/c://my.jar!/com/mycompany/MyClass.class") }));
+						List.of(new URL("jar:file:/c://my.jar!/com/mycompany/MyClass.class")));
 			}
 
 		};
